docs/api/qiskit/0.19/qiskit.providers.BaseProvider.md
---
title: BaseProvider
description: API reference for qiskit.providers.BaseProvider
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.providers.BaseProvider
---

# BaseProvider

<span id="qiskit.providers.BaseProvider" />

`BaseProvider(*args, **kwargs)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/providers/baseprovider.py "view source code")

Base class for a Backend Provider.

## Methods

### backends

<span id="qiskit.providers.BaseProvider.backends" />

`abstract BaseProvider.backends(name=None, **kwargs)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/providers/baseprovider.py "view source code")

Return a list of backends matching the specified filtering.

**Parameters**

*   **name** (*str*) – name of the backend.
*   **\*\*kwargs** – dict used for filtering.

**Returns**

**a list of Backends that match the filtering**

criteria.

**Return type**

list\[[BaseBackend](qiskit.providers.BaseBackend "qiskit.providers.BaseBackend")]

### get\_backend

<span id="qiskit.providers.BaseProvider.get_backend" />

`BaseProvider.get_backend(name=None, **kwargs)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/providers/baseprovider.py "view source code")

Return a single backend matching the specified filtering.

**Parameters**

*   **name** (*str*) – name of the backend.
*   **\*\*kwargs** – dict used for filtering.

**Returns**

a backend matching the filtering.

**Return type**

[BaseBackend](qiskit.providers.BaseBackend "qiskit.providers.BaseBackend")

**Raises**

[**QiskitBackendNotFoundError**](qiskit.providers.QiskitBackendNotFoundError "qiskit.providers.QiskitBackendNotFoundError") – if no backend could be found or more than one backend matches the filtering criteria.

